# check-unicode

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  test.yml
docs/: check-unicode.1
src/check_unicode/: __init__.py  categories.py  checker.py  confusables.py  fixer.py  main.py  output.py  scripts.py
tests/: __init__.py  test_checker.py  test_cli.py  test_confusables.py  test_fixer.py  test_integration.py  test_output.py  test_scripts.py
tests/fixtures/: LICENSES.fixtures  bidi_attack.txt  classic_arabic.txt  classic_chinese.txt  classic_cyrillic.txt  classic_devanagari.txt  classic_greek.txt  classic_hebrew.txt  classic_japanese.txt  classic_korean.txt  clean_ascii.txt  confusable_cyrillic.txt  mixed_allowed.txt  nerd_font_icons.txt  printable_i18n.txt  pure_cyrillic.txt  smart_quotes.txt  trojan_commenting_out.py  trojan_early_return.py  zero_width.txt
