[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "check-unicode"
description = "Pre-commit hook to detect and fix non-ASCII Unicode characters"
readme = "README.md"
keywords = [ "linting", "pre-commit", "security", "trojan-source", "unicode" ]
license = "MIT"
authors = [ { name = "mit-d", email = "derekmttn@gmail.com" } ]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance",
]
dynamic = [ "version" ]
optional-dependencies.dev = [ "bump-my-version", "mypy", "pytest", "pytest-cov", "ruff" ]
urls.Changelog = "https://github.com/mit-d/check-unicode/blob/main/CHANGELOG.md"
urls.Issues = "https://github.com/mit-d/check-unicode/issues"
urls.Repository = "https://github.com/mit-d/check-unicode"
scripts.check-unicode = "check_unicode.main:main"

[tool.hatch]
build.targets.wheel.packages = [ "src/check_unicode" ]
build.targets.sdist.include = [ "src/", "docs/check-unicode.1" ]
version.path = "src/check_unicode/__init__.py"

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4
lint.select = [ "ALL" ]
lint.ignore = [
  "COM812", # trailing comma -- conflicts with formatter
  "D203",   # incompatible with D211 (no-blank-line-before-class)
  "D213",   # incompatible with D212 (multi-line-summary-first-line)
  "ISC001", # single-line implicit string concat -- conflicts with formatter
]
lint.per-file-ignores."tests/**" = [
  "PLR2004", # magic values in test assertions are readable
  "S101",    # assert is fine in tests
]
lint.per-file-ignores."tests/fixtures/**" = [
  "ALL", # fixture files are intentionally non-conformant
]

[tool.codespell]
ignore-words-list = "nd,caf,te"

[tool.pytest]
ini_options.testpaths = [ "tests" ]

[tool.bumpversion]
current_version = "0.4.0"
commit = true
tag = true
tag_name = "v{new_version}"
commit_args = "--no-verify"
message = "release: v{new_version}"
files = [
  { filename = "src/check_unicode/__init__.py" },
  { filename = "CHANGELOG.md", search = "## Unreleased", replace = "## {new_version} - {now:%Y-%m-%d}" },
  { filename = "README.md", search = "rev: v{current_version}", replace = "rev: v{new_version}" },
]

[tool.mypy]
python_version = "3.11"
strict = true
